tests/baselines/reference/logicalNotOperatorWithEnumType.errors.txt
tests/cases/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithEnumType.ts(21,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorWithEnumType.ts (1 errors) ====
    // ! operator on enum type
    
    enum ENUM { A, B, C };
    enum ENUM1 { };
    
    // enum type var
    var ResultIsBoolean1 = !ENUM;
    
    // enum type expressions
    var ResultIsBoolean2 = !ENUM["B"];
    var ResultIsBoolean3 = !(ENUM.B + ENUM["C"]);
    
    // multiple ! operators
    var ResultIsBoolean4 = !!ENUM;
    var ResultIsBoolean5 = !!!(ENUM["B"] + ENUM.C);
    
    // miss assignment operators
    !ENUM;
    !ENUM1;
    !ENUM.B;
    !ENUM, ENUM1;
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.